# corporate-reports

./: .gitignore  README.md  _config.yml  charts.html  pyproject.toml  report.md  カナレ電気_企業分析レポート.md
.claude/hooks/: format-and-type-check.sh
.claude/skills/compare/: SKILL.md
.claude/skills/corporate-report/: SKILL.md
.claude/skills/download-edinet/: SKILL.md
.claude/skills/extract-data/: SKILL.md
.claude/skills/tag/: SKILL.md
.claude/skills/update-price/: SKILL.md
.claude/skills/update-report/: SKILL.md
.github/workflows/: ci.yml
5819_canare/: README.md  charts.html  report.md
docs/: edinet-api-setup.md  getting-started.md
reports/5819_canare/: README.md  charts.html  notes.md  report.html  report.md
reports/9991_jecos/: notes.md  report.html  report.md
src/corporate_reports/: __init__.py  build_report.py  cli.py  edinet.py  valuation.py
tests/: README.md  conftest.py  test_edinet_api.py  test_valuation.py
